# PydanticCourse

./: README.md  additional_field_features.py  alias.py  annotation_types.py  basic.py  complex_models.py  csv_file.py  custom_validatprs.py  properties_computed_fields.py  pyproject.toml  rest_api.py  specialised_types.py  utc_information.txt
data/: test.csv  test2.csv
type_hinting_notes/: deprecation.py  main.py  project.py
